# gravekeeper

./: .env.example  .gitignore  BLOCKERS.md  BUILD_PLAN.md  CHANGELOG.md  README.md
docs/: ARCHITECTURE.md  SYNTHETIC_ENV.md  THREAT_MODEL.md
scanner/: pyproject.toml  requirements.txt
scanner/gravekeeper/: config.py  main.py  models.py  pipeline.py  registry.py  scoring.py  storage.py
scanner/gravekeeper/actions/: __init__.py
scanner/gravekeeper/api/: auth.py  registry_routes.py  routes.py
scanner/gravekeeper/connectors/: _util.py  aws.py  azure.py  base.py  gcp.py  github.py  synthetic.py
scanner/migrations/: 0001_init.sql  0002_registry.sql
scanner/tests/: test_api.py  test_api_registry.py  test_auth.py  test_connectors_aws.py  test_connectors_azure.py  test_connectors_gcp.py  test_connectors_github.py  test_models.py  test_pipeline_coverage.py  test_registry.py  test_scoring.py  test_storage.py  test_stub_connectors.py  test_synthetic_pipeline.py
scanner/tests/fixtures/: synthetic_env.json
web/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.test.json  vitest.config.ts  vitest.setup.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/about/: page.tsx
web/app/demo/: page.tsx
web/app/registry/: page.tsx
web/app/scan/: page.tsx
web/components/: CountUp.tsx  MindlessCursor.tsx  RegistryEditor.tsx  ResultsDashboard.tsx  Stat.tsx  ZombieMascot.tsx
web/e2e/: demo.spec.ts  smoke.spec.ts
web/lib/: api.ts  types.ts
web/public/: gravekeeper-readonly-policy.json
(+4 files in other folders)
